// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`볼링공 그림 > 볼링공_그림이_그대로다 1`] = `
"
<svg class="bw-ball" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
  <g class="bw-ball-body">
    <circle cx="32" cy="32" r="30" fill="#2b2f4a" stroke="#12142a" stroke-width="2" />
    <path d="M12 18 A30 30 0 0 1 34 5" stroke="#6f76a8" stroke-width="5"
          stroke-linecap="round" fill="none" opacity="0.55" />
    <circle cx="25" cy="24" r="4.4" fill="#0d0f1e" />
    <circle cx="38" cy="21" r="4.4" fill="#0d0f1e" />
    <circle cx="32" cy="34" r="4.4" fill="#0d0f1e" />
  </g>
</svg>"
`;

exports[`소품 그림 > 네트_그림이_그대로다 1`] = `
"
<svg class="vb-net" viewBox="0 0 96 85"
     xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
  <g class="vb-net-mesh">
    <path d="M6 20 H90 M6 34 H90 M6 48 H90 M6 62 H90
             M20 8 V74 M34 8 V74 M48 8 V74 M62 8 V74 M76 8 V74"
          stroke="#f4f1e8" stroke-width="1.6" opacity="0.7" />
    <rect x="4" y="6" width="88" height="70" fill="none"
          stroke="#f4f1e8" stroke-width="2" opacity="0.9" />
    <rect x="4" y="1.5" width="88" height="8" rx="3.5" fill="#f4f1e8" />
  </g>
  <rect x="0" y="0" width="7" height="84" rx="3.5" fill="#a9743c" />
  <rect x="89" y="0" width="7" height="84" rx="3.5" fill="#a9743c" />
</svg>"
`;

exports[`소품 그림 > 모래사장_그림이_그대로다 1`] = `
"
<svg class="vb-sand" viewBox="0 0 1000 88" preserveAspectRatio="none"
     xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
  <defs>
    <linearGradient id="vb-sand-fill" x1="0" y1="0" x2="0" y2="1">
      <stop offset="0%" stop-color="#f4dfae" />
      <stop offset="100%" stop-color="#d9b878" />
    </linearGradient>
  </defs>
  <path d="M0 9 Q 125 2 250 8 Q 375 14 500 7 Q 625 1 750 9 Q 875 15 1000 8
           L1000 80 Q 500 96 0 80 Z"
        fill="url(#vb-sand-fill)" />
  <path d="M0 9 Q 125 2 250 8 Q 375 14 500 7 Q 625 1 750 9 Q 875 15 1000 8"
        stroke="#fff3d4" stroke-width="3" fill="none" opacity="0.8" />
</svg>"
`;

exports[`소품 그림 > 비치볼_그림이_그대로다 1`] = `
"
<svg class="vb-ball" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
  <g class="vb-ball-body">
    <circle cx="32" cy="32" r="30" fill="#fdfcf7" stroke="#c9c2b0" stroke-width="1.6" />
    <path d="M32 2 A30 30 0 0 1 60 22 Q 36 26 32 2 Z" fill="#ff6f9c" />
    <path d="M60 22 A30 30 0 0 1 46 57 Q 34 36 60 22 Z" fill="#3fb8d8" />
    <path d="M46 57 A30 30 0 0 1 8 46 Q 28 34 46 57 Z" fill="#ffd35c" />
    <circle cx="32" cy="32" r="30" fill="none" stroke="#b9b1a0" stroke-width="1.6" />
    <ellipse cx="22" cy="18" rx="8" ry="5" fill="#ffffff" opacity="0.55"
             transform="rotate(-28 22 18)" />
  </g>
</svg>"
`;

exports[`커서 방망이 > 커서_방망이_그림이_그대로다 1`] = `"url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='48' height='48' viewBox='0 0 48 48'%3E%3Cg transform='rotate(55 10 30)'%3E%3Cpath d='M10 30 L17 23' stroke='%233a2a1a' stroke-width='4' stroke-linecap='round'/%3E%3Cpath d='M15 25 C20 20 25 14 29 9 C31.5 6.5 34 9 31.5 11.5 C27 17 21 22 17 25 Z' fill='%23d59a55' stroke='%236b4520' stroke-width='2' stroke-linejoin='round'/%3E%3C/g%3E%3C/svg%3E") 10 30"`;

exports[`커서 방망이 > 커서_방망이_그림이_그대로다 2`] = `"url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='48' height='48' viewBox='0 0 48 48'%3E%3Cg transform='rotate(-40 10 30)'%3E%3Cpath d='M10 30 L17 23' stroke='%233a2a1a' stroke-width='4' stroke-linecap='round'/%3E%3Cpath d='M15 25 C20 20 25 14 29 9 C31.5 6.5 34 9 31.5 11.5 C27 17 21 22 17 25 Z' fill='%23d59a55' stroke='%236b4520' stroke-width='2' stroke-linejoin='round'/%3E%3C/g%3E%3C/svg%3E") 10 30"`;

exports[`펭귄 그림 > 수컷_펭귄_그림이_그대로다 1`] = `
"<svg class="penguin" viewBox="0 0 100 130" role="img" aria-label="펭귄" xmlns="http://www.w3.org/2000/svg">
<g class="pg-halo" aria-hidden="true">
<ellipse class="pg-shadow" cx="50" cy="123" rx="23" ry="4.5" fill="#1b1f24" opacity="0.18">
</ellipse>
<ellipse class="pg-hole" cx="88" cy="121" rx="12" ry="3.8" fill="#2f4a63">
</ellipse>
<g class="pg-all">
<path class="pg-tail" d="M33 98 L16 111 L35 106 Z" fill="#1b1f24">
</path>
<path class="pg-wing-far" d="M36 52 C27 59 24 76 29 88 C31 92 35 91 36 87 C38 75 39 61 39 54 Z" fill="#1b1f24" opacity="0.72">
</path>
<g class="pg-foot--far">
<rect x="44" y="104" width="4" height="9" rx="2" fill="#e3a892" opacity="0.85">
</rect>
<path d="M46 112 L38 120 L52 120 Z" fill="#e3a892" opacity="0.85">
</path>
</g>
<g class="pg-foot--near">
<rect x="54" y="104" width="4" height="9" rx="2" fill="#e3a892">
</rect>
<path d="M56 112 L48 120 L63 120 Z" fill="#e3a892">
</path>
</g>
<g class="pg-body">
<path d="M50 40 C64 40 71 58 71 80 C71 101 62 113 50 113 C38 113 29 101 29 80 C29 58 36 40 50 40 Z" fill="#1b1f24">
</path>
<ellipse cx="47" cy="82" rx="14.5" ry="26" fill="#f7f9fb">
</ellipse>
</g>
<g class="pg-head">
<circle cx="50" cy="30" r="16" fill="#1b1f24">
</circle>
<path d="M64 29 L77 32.5 L64 36.5 Z" fill="#4a2f2f">
</path>
<path class="pg-beak-lower" d="M64 33 L76 33.5 L64 38.5 Z" fill="#4a2f2f">
</path>
<ellipse cx="57" cy="27" rx="5.2" ry="6.2" fill="#f7f9fb">
</ellipse>
<g class="pg-gaze">
<circle class="pg-eye" cx="57.5" cy="27.5" r="2.5" fill="#1b1f24">
</circle>
</g>
</g>
<g class="pg-luau">
<g class="pg-luau-skirt">
<path d="M31 87 C38 82.5 56 82.5 63 87" stroke="#c8912e" stroke-width="5" stroke-linecap="round" fill="none">
</path>
<path d="M32 88 C39 84.5 55 84.5 62 88
               L60.5 98 L58.5 105 L57 97 L54 110 L52 98 L50 111.5
               L48 99 L46 111 L44 99 L41.5 108 L39.5 98 L37 104 L35.5 96 L33.5 97 Z" fill="#c8912e">
</path>
<path d="M41 89 L40 104 M47 89.5 L47 107 M54 89 L54.5 106" stroke="#8f6414" stroke-width="1.3" stroke-linecap="round" fill="none" opacity="0.7">
</path>
<path d="M31.5 88 C38.5 84 55.5 84 62.5 88" stroke="#8f6414" stroke-width="1.8" stroke-linecap="round" fill="none">
</path>
</g>
<g class="pg-luau-top">
<path d="M32.5 58.5 C40 62.5 55 62.5 62.5 58.5" stroke="#8f6414" stroke-width="2" stroke-linecap="round" fill="none">
</path>
<path d="M40 60 L47 49.5 L55 60" stroke="#8f6414" stroke-width="1.9" stroke-linecap="round" stroke-linejoin="round" fill="none">
</path>
<path d="M34.5 60.5 L47 60.5 L41 72.5 Z" fill="#c8912e" stroke="#8f6414" stroke-width="1.4" stroke-linejoin="round">
</path>
<path d="M47 60.5 L59.5 60.5 L53.5 72.5 Z" fill="#c8912e" stroke="#8f6414" stroke-width="1.4" stroke-linejoin="round">
</path>
</g>
<g class="pg-lei">
<path d="M34 52 C40 62 55 62 62 52" stroke="#e8543f" stroke-width="5.5" stroke-linecap="round" fill="none">
</path>
<circle cx="39" cy="57" r="2.6" fill="#f2c14e">
</circle>
<circle cx="48" cy="60" r="2.8" fill="#f2c14e">
</circle>
<circle cx="57" cy="57" r="2.6" fill="#f2c14e">
</circle>
</g>
</g>
<path class="pg-wing-near" d="M66 50 C76 57 80 75 74 89 C72 93 68 91 67 87 C64 74 63 60 64 52 Z" fill="#1b1f24">
</path>
<g class="pg-bat">
<path d="M69.2 85.8 L71.9 85.2 L76.2 122 C76.7 126.6 74.7 129.2 72.6 129.2 C70.5 129.2 68.7 126.6 69.2 122 Z" fill="#a1712f">
</path>
<rect x="68.4" y="82.4" width="3.9" height="6.4" rx="1.7" fill="#26262b">
</rect>
</g>
<path class="pg-rod" d="M70 87 L98 95" stroke="#a1712f" stroke-width="2.6" stroke-linecap="round" fill="none">
</path>
<path class="pg-line" d="M98 95 L90 116" stroke="#1b1f24" stroke-width="0.9" fill="none" opacity="0.55">
</path>
<circle class="pg-float" cx="90" cy="117" r="2.8" fill="#d94f3d">
</circle>
<g class="pg-fish">
<ellipse cx="85" cy="107" rx="7" ry="3.6" fill="#8fb3c9">
</ellipse>
<path d="M92 107 L97 103.5 L97 110.5 Z" fill="#8fb3c9">
</path>
<circle cx="81" cy="106" r="0.9" fill="#1b1f24">
</circle>
</g>
</g>
</g>
<ellipse class="pg-shadow" cx="50" cy="123" rx="23" ry="4.5" fill="#1b1f24" opacity="0.18">
</ellipse>
<ellipse class="pg-hole" cx="88" cy="121" rx="12" ry="3.8" fill="#2f4a63">
</ellipse>
<g class="pg-all">
<path class="pg-tail" d="M33 98 L16 111 L35 106 Z" fill="#1b1f24">
</path>
<path class="pg-wing-far" d="M36 52 C27 59 24 76 29 88 C31 92 35 91 36 87 C38 75 39 61 39 54 Z" fill="#1b1f24" opacity="0.72">
</path>
<g class="pg-foot--far">
<rect x="44" y="104" width="4" height="9" rx="2" fill="#e3a892" opacity="0.85">
</rect>
<path d="M46 112 L38 120 L52 120 Z" fill="#e3a892" opacity="0.85">
</path>
</g>
<g class="pg-foot--near">
<rect x="54" y="104" width="4" height="9" rx="2" fill="#e3a892">
</rect>
<path d="M56 112 L48 120 L63 120 Z" fill="#e3a892">
</path>
</g>
<g class="pg-body">
<path d="M50 40 C64 40 71 58 71 80 C71 101 62 113 50 113 C38 113 29 101 29 80 C29 58 36 40 50 40 Z" fill="#1b1f24">
</path>
<ellipse cx="47" cy="82" rx="14.5" ry="26" fill="#f7f9fb">
</ellipse>
</g>
<g class="pg-head">
<circle cx="50" cy="30" r="16" fill="#1b1f24">
</circle>
<path d="M64 29 L77 32.5 L64 36.5 Z" fill="#4a2f2f">
</path>
<path class="pg-beak-lower" d="M64 33 L76 33.5 L64 38.5 Z" fill="#4a2f2f">
</path>
<ellipse cx="57" cy="27" rx="5.2" ry="6.2" fill="#f7f9fb">
</ellipse>
<g class="pg-gaze">
<circle class="pg-eye" cx="57.5" cy="27.5" r="2.5" fill="#1b1f24">
</circle>
</g>
</g>
<g class="pg-luau">
<g class="pg-luau-skirt">
<path d="M31 87 C38 82.5 56 82.5 63 87" stroke="#c8912e" stroke-width="5" stroke-linecap="round" fill="none">
</path>
<path d="M32 88 C39 84.5 55 84.5 62 88
               L60.5 98 L58.5 105 L57 97 L54 110 L52 98 L50 111.5
               L48 99 L46 111 L44 99 L41.5 108 L39.5 98 L37 104 L35.5 96 L33.5 97 Z" fill="#c8912e">
</path>
<path d="M41 89 L40 104 M47 89.5 L47 107 M54 89 L54.5 106" stroke="#8f6414" stroke-width="1.3" stroke-linecap="round" fill="none" opacity="0.7">
</path>
<path d="M31.5 88 C38.5 84 55.5 84 62.5 88" stroke="#8f6414" stroke-width="1.8" stroke-linecap="round" fill="none">
</path>
</g>
<g class="pg-luau-top">
<path d="M32.5 58.5 C40 62.5 55 62.5 62.5 58.5" stroke="#8f6414" stroke-width="2" stroke-linecap="round" fill="none">
</path>
<path d="M40 60 L47 49.5 L55 60" stroke="#8f6414" stroke-width="1.9" stroke-linecap="round" stroke-linejoin="round" fill="none">
</path>
<path d="M34.5 60.5 L47 60.5 L41 72.5 Z" fill="#c8912e" stroke="#8f6414" stroke-width="1.4" stroke-linejoin="round">
</path>
<path d="M47 60.5 L59.5 60.5 L53.5 72.5 Z" fill="#c8912e" stroke="#8f6414" stroke-width="1.4" stroke-linejoin="round">
</path>
</g>
<g class="pg-lei">
<path d="M34 52 C40 62 55 62 62 52" stroke="#e8543f" stroke-width="5.5" stroke-linecap="round" fill="none">
</path>
<circle cx="39" cy="57" r="2.6" fill="#f2c14e">
</circle>
<circle cx="48" cy="60" r="2.8" fill="#f2c14e">
</circle>
<circle cx="57" cy="57" r="2.6" fill="#f2c14e">
</circle>
</g>
</g>
<path class="pg-wing-near" d="M66 50 C76 57 80 75 74 89 C72 93 68 91 67 87 C64 74 63 60 64 52 Z" fill="#1b1f24">
</path>
<g class="pg-bat">
<path d="M69.2 85.8 L71.9 85.2 L76.2 122 C76.7 126.6 74.7 129.2 72.6 129.2 C70.5 129.2 68.7 126.6 69.2 122 Z" fill="#a1712f">
</path>
<rect x="68.4" y="82.4" width="3.9" height="6.4" rx="1.7" fill="#26262b">
</rect>
</g>
<path class="pg-rod" d="M70 87 L98 95" stroke="#a1712f" stroke-width="2.6" stroke-linecap="round" fill="none">
</path>
<path class="pg-line" d="M98 95 L90 116" stroke="#1b1f24" stroke-width="0.9" fill="none" opacity="0.55">
</path>
<circle class="pg-float" cx="90" cy="117" r="2.8" fill="#d94f3d">
</circle>
<g class="pg-fish">
<ellipse cx="85" cy="107" rx="7" ry="3.6" fill="#8fb3c9">
</ellipse>
<path d="M92 107 L97 103.5 L97 110.5 Z" fill="#8fb3c9">
</path>
<circle cx="81" cy="106" r="0.9" fill="#1b1f24">
</circle>
</g>
</g>
</svg>"
`;

exports[`펭귄 그림 > 암컷_펭귄_그림이_그대로다 1`] = `
"<svg class="penguin pg-female" viewBox="0 0 100 130" role="img" aria-label="펭귄" xmlns="http://www.w3.org/2000/svg">
<g class="pg-halo" aria-hidden="true">
<ellipse class="pg-shadow" cx="50" cy="123" rx="23" ry="4.5" fill="#1b1f24" opacity="0.18">
</ellipse>
<ellipse class="pg-hole" cx="88" cy="121" rx="12" ry="3.8" fill="#2f4a63">
</ellipse>
<g class="pg-all">
<path class="pg-tail" d="M33 98 L16 111 L35 106 Z" fill="#1b1f24">
</path>
<path class="pg-wing-far" d="M36 52 C27 59 24 76 29 88 C31 92 35 91 36 87 C38 75 39 61 39 54 Z" fill="#1b1f24" opacity="0.72">
</path>
<g class="pg-foot--far">
<rect x="44" y="104" width="4" height="9" rx="2" fill="#e3a892" opacity="0.85">
</rect>
<path d="M46 112 L38 120 L52 120 Z" fill="#e3a892" opacity="0.85">
</path>
</g>
<g class="pg-foot--near">
<rect x="54" y="104" width="4" height="9" rx="2" fill="#e3a892">
</rect>
<path d="M56 112 L48 120 L63 120 Z" fill="#e3a892">
</path>
</g>
<g class="pg-body">
<path d="M50 40 C64 40 71 58 71 80 C71 101 62 113 50 113 C38 113 29 101 29 80 C29 58 36 40 50 40 Z" fill="#1b1f24">
</path>
<ellipse cx="47" cy="82" rx="14.5" ry="26" fill="#f7f9fb">
</ellipse>
</g>
<g class="pg-head">
<circle cx="50" cy="30" r="16" fill="#1b1f24">
</circle>
<path d="M64 29 L77 32.5 L64 36.5 Z" fill="#4a2f2f">
</path>
<path class="pg-beak-lower" d="M64 33 L76 33.5 L64 38.5 Z" fill="#4a2f2f">
</path>
<ellipse cx="57" cy="27" rx="5.2" ry="6.2" fill="#f7f9fb">
</ellipse>
<g class="pg-gaze">
<circle class="pg-eye" cx="57.5" cy="27.5" r="2.5" fill="#1b1f24">
</circle>
</g>
</g>
<g class="pg-luau">
<g class="pg-luau-skirt">
<path d="M31 87 C38 82.5 56 82.5 63 87" stroke="#c8912e" stroke-width="5" stroke-linecap="round" fill="none">
</path>
<path d="M32 88 C39 84.5 55 84.5 62 88
               L60.5 98 L58.5 105 L57 97 L54 110 L52 98 L50 111.5
               L48 99 L46 111 L44 99 L41.5 108 L39.5 98 L37 104 L35.5 96 L33.5 97 Z" fill="#c8912e">
</path>
<path d="M41 89 L40 104 M47 89.5 L47 107 M54 89 L54.5 106" stroke="#8f6414" stroke-width="1.3" stroke-linecap="round" fill="none" opacity="0.7">
</path>
<path d="M31.5 88 C38.5 84 55.5 84 62.5 88" stroke="#8f6414" stroke-width="1.8" stroke-linecap="round" fill="none">
</path>
</g>
<g class="pg-luau-top">
<path d="M32.5 58.5 C40 62.5 55 62.5 62.5 58.5" stroke="#8f6414" stroke-width="2" stroke-linecap="round" fill="none">
</path>
<path d="M40 60 L47 49.5 L55 60" stroke="#8f6414" stroke-width="1.9" stroke-linecap="round" stroke-linejoin="round" fill="none">
</path>
<path d="M34.5 60.5 L47 60.5 L41 72.5 Z" fill="#c8912e" stroke="#8f6414" stroke-width="1.4" stroke-linejoin="round">
</path>
<path d="M47 60.5 L59.5 60.5 L53.5 72.5 Z" fill="#c8912e" stroke="#8f6414" stroke-width="1.4" stroke-linejoin="round">
</path>
</g>
<g class="pg-lei">
<path d="M34 52 C40 62 55 62 62 52" stroke="#e8543f" stroke-width="5.5" stroke-linecap="round" fill="none">
</path>
<circle cx="39" cy="57" r="2.6" fill="#f2c14e">
</circle>
<circle cx="48" cy="60" r="2.8" fill="#f2c14e">
</circle>
<circle cx="57" cy="57" r="2.6" fill="#f2c14e">
</circle>
</g>
</g>
<path class="pg-wing-near" d="M66 50 C76 57 80 75 74 89 C72 93 68 91 67 87 C64 74 63 60 64 52 Z" fill="#1b1f24">
</path>
<g class="pg-bat">
<path d="M69.2 85.8 L71.9 85.2 L76.2 122 C76.7 126.6 74.7 129.2 72.6 129.2 C70.5 129.2 68.7 126.6 69.2 122 Z" fill="#a1712f">
</path>
<rect x="68.4" y="82.4" width="3.9" height="6.4" rx="1.7" fill="#26262b">
</rect>
</g>
<path class="pg-rod" d="M70 87 L98 95" stroke="#a1712f" stroke-width="2.6" stroke-linecap="round" fill="none">
</path>
<path class="pg-line" d="M98 95 L90 116" stroke="#1b1f24" stroke-width="0.9" fill="none" opacity="0.55">
</path>
<circle class="pg-float" cx="90" cy="117" r="2.8" fill="#d94f3d">
</circle>
<g class="pg-fish">
<ellipse cx="85" cy="107" rx="7" ry="3.6" fill="#8fb3c9">
</ellipse>
<path d="M92 107 L97 103.5 L97 110.5 Z" fill="#8fb3c9">
</path>
<circle cx="81" cy="106" r="0.9" fill="#1b1f24">
</circle>
</g>
</g>
</g>
<ellipse class="pg-shadow" cx="50" cy="123" rx="23" ry="4.5" fill="#1b1f24" opacity="0.18">
</ellipse>
<ellipse class="pg-hole" cx="88" cy="121" rx="12" ry="3.8" fill="#2f4a63">
</ellipse>
<g class="pg-all">
<path class="pg-tail" d="M33 98 L16 111 L35 106 Z" fill="#1b1f24">
</path>
<path class="pg-wing-far" d="M36 52 C27 59 24 76 29 88 C31 92 35 91 36 87 C38 75 39 61 39 54 Z" fill="#1b1f24" opacity="0.72">
</path>
<g class="pg-foot--far">
<rect x="44" y="104" width="4" height="9" rx="2" fill="#e3a892" opacity="0.85">
</rect>
<path d="M46 112 L38 120 L52 120 Z" fill="#e3a892" opacity="0.85">
</path>
</g>
<g class="pg-foot--near">
<rect x="54" y="104" width="4" height="9" rx="2" fill="#e3a892">
</rect>
<path d="M56 112 L48 120 L63 120 Z" fill="#e3a892">
</path>
</g>
<g class="pg-body">
<path d="M50 40 C64 40 71 58 71 80 C71 101 62 113 50 113 C38 113 29 101 29 80 C29 58 36 40 50 40 Z" fill="#1b1f24">
</path>
<ellipse cx="47" cy="82" rx="14.5" ry="26" fill="#f7f9fb">
</ellipse>
</g>
<g class="pg-head">
<circle cx="50" cy="30" r="16" fill="#1b1f24">
</circle>
<path d="M64 29 L77 32.5 L64 36.5 Z" fill="#4a2f2f">
</path>
<path class="pg-beak-lower" d="M64 33 L76 33.5 L64 38.5 Z" fill="#4a2f2f">
</path>
<ellipse cx="57" cy="27" rx="5.2" ry="6.2" fill="#f7f9fb">
</ellipse>
<g class="pg-gaze">
<circle class="pg-eye" cx="57.5" cy="27.5" r="2.5" fill="#1b1f24">
</circle>
</g>
</g>
<g class="pg-luau">
<g class="pg-luau-skirt">
<path d="M31 87 C38 82.5 56 82.5 63 87" stroke="#c8912e" stroke-width="5" stroke-linecap="round" fill="none">
</path>
<path d="M32 88 C39 84.5 55 84.5 62 88
               L60.5 98 L58.5 105 L57 97 L54 110 L52 98 L50 111.5
               L48 99 L46 111 L44 99 L41.5 108 L39.5 98 L37 104 L35.5 96 L33.5 97 Z" fill="#c8912e">
</path>
<path d="M41 89 L40 104 M47 89.5 L47 107 M54 89 L54.5 106" stroke="#8f6414" stroke-width="1.3" stroke-linecap="round" fill="none" opacity="0.7">
</path>
<path d="M31.5 88 C38.5 84 55.5 84 62.5 88" stroke="#8f6414" stroke-width="1.8" stroke-linecap="round" fill="none">
</path>
</g>
<g class="pg-luau-top">
<path d="M32.5 58.5 C40 62.5 55 62.5 62.5 58.5" stroke="#8f6414" stroke-width="2" stroke-linecap="round" fill="none">
</path>
<path d="M40 60 L47 49.5 L55 60" stroke="#8f6414" stroke-width="1.9" stroke-linecap="round" stroke-linejoin="round" fill="none">
</path>
<path d="M34.5 60.5 L47 60.5 L41 72.5 Z" fill="#c8912e" stroke="#8f6414" stroke-width="1.4" stroke-linejoin="round">
</path>
<path d="M47 60.5 L59.5 60.5 L53.5 72.5 Z" fill="#c8912e" stroke="#8f6414" stroke-width="1.4" stroke-linejoin="round">
</path>
</g>
<g class="pg-lei">
<path d="M34 52 C40 62 55 62 62 52" stroke="#e8543f" stroke-width="5.5" stroke-linecap="round" fill="none">
</path>
<circle cx="39" cy="57" r="2.6" fill="#f2c14e">
</circle>
<circle cx="48" cy="60" r="2.8" fill="#f2c14e">
</circle>
<circle cx="57" cy="57" r="2.6" fill="#f2c14e">
</circle>
</g>
</g>
<path class="pg-wing-near" d="M66 50 C76 57 80 75 74 89 C72 93 68 91 67 87 C64 74 63 60 64 52 Z" fill="#1b1f24">
</path>
<g class="pg-bat">
<path d="M69.2 85.8 L71.9 85.2 L76.2 122 C76.7 126.6 74.7 129.2 72.6 129.2 C70.5 129.2 68.7 126.6 69.2 122 Z" fill="#a1712f">
</path>
<rect x="68.4" y="82.4" width="3.9" height="6.4" rx="1.7" fill="#26262b">
</rect>
</g>
<path class="pg-rod" d="M70 87 L98 95" stroke="#a1712f" stroke-width="2.6" stroke-linecap="round" fill="none">
</path>
<path class="pg-line" d="M98 95 L90 116" stroke="#1b1f24" stroke-width="0.9" fill="none" opacity="0.55">
</path>
<circle class="pg-float" cx="90" cy="117" r="2.8" fill="#d94f3d">
</circle>
<g class="pg-fish">
<ellipse cx="85" cy="107" rx="7" ry="3.6" fill="#8fb3c9">
</ellipse>
<path d="M92 107 L97 103.5 L97 110.5 Z" fill="#8fb3c9">
</path>
<circle cx="81" cy="106" r="0.9" fill="#1b1f24">
</circle>
</g>
</g>
</svg>"
`;
